--- a/app.json
+++ b/app.json
@@ -10,5 +10,8 @@
     "navigationBarTextStyle": "black",
     "navigationStyle": "default"
   },
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "networkTimeout": {
+    "request": 10000
+  }
 }
